--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -52,5 +52,6 @@
   "sn54.13:11.2": "Au moment, Ananda, où un mendiant demeure ainsi présent d’esprit et qu’il examine, analyse et investigue minutieusement cet état avec discernement,",
   "sn54.13:11.3": "à ce moment-là le facteur d’éveil d’investigation des phénomènes est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’investigation des phénomènes, à ce moment-là le facteur d’éveil d’investigation des phénomènes va à la complétude de son développement chez ce mendiant.",
   "sn54.13:12.1": "En examinant, analysant et investiguant minutieusement cet état avec discernement, une énergie sans relâchement est activée en lui.",
-  "sn54.13:12.2": "Au moment, Ananda, où examinant, analysant et investiguant minutieusement cet état avec discernement, une énergie sans relâchement est activée chez un mendiant,"
+  "sn54.13:12.2": "Au moment, Ananda, où examinant, analysant et investiguant minutieusement cet état avec discernement, une énergie sans relâchement est activée chez un mendiant,",
+  "sn54.13:12.3": "à ce moment-là le facteur d’éveil d’énergie est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’énergie, à ce moment-là, le facteur d’éveil d’énergie va à la complétude de son développement chez ce mendiant."
 }
