--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -58,5 +58,6 @@
   "sn54.13:13.2": "Au moment, Ananda, où une exaltation détachée de la chair apparaît chez un mendiant qui a son énergie activée,",
   "sn54.13:13.3": "à ce moment-là le facteur d’éveil d’exaltation est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’exaltation, à ce moment-là le facteur d’éveil d’exaltation va à la complétude de son développement chez ce mendiant.",
   "sn54.13:14.1": "Chez celui qui a un esprit exalté, le corps se calme et l’esprit se calme.",
-  "sn54.13:14.2": "Au moment, Ananda, où chez un mendiant qui a un esprit exalté le corps se calme et l’esprit se calme,"
+  "sn54.13:14.2": "Au moment, Ananda, où chez un mendiant qui a un esprit exalté le corps se calme et l’esprit se calme,",
+  "sn54.13:14.3": "à ce moment-là, le facteur d’éveil de tranquillité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de tranquillité, à ce moment-là, le facteur d’éveil de tranquillité va à la complétude de son développement chez ce mendiant."
 }
