--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -62,5 +62,6 @@
   "sn54.13:14.3": "à ce moment-là, le facteur d’éveil de tranquillité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de tranquillité, à ce moment-là, le facteur d’éveil de tranquillité va à la complétude de son développement chez ce mendiant.",
   "sn54.13:15.1": "Chez celui dont le corps est calme et qui est dans le bien-être, l’esprit se concentre.",
   "sn54.13:15.2": "Au moment, Ananda, où chez un mendiant dont le corps est calme et qui est dans le bien-être, l’esprit se concentre,",
-  "sn54.13:15.3": "à ce moment-là le facteur d’éveil de concentration est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de concentration, à ce moment-là le facteur d’éveil de concentration va à la complétude de son développement chez ce mendiant."
+  "sn54.13:15.3": "à ce moment-là le facteur d’éveil de concentration est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de concentration, à ce moment-là le facteur d’éveil de concentration va à la complétude de son développement chez ce mendiant.",
+  "sn54.13:16.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré."
 }
