--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -65,5 +65,6 @@
   "sn54.13:15.3": "à ce moment-là le facteur d’éveil de concentration est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de concentration, à ce moment-là le facteur d’éveil de concentration va à la complétude de son développement chez ce mendiant.",
   "sn54.13:16.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré.",
   "sn54.13:16.2": "Au moment, Ananda, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,",
-  "sn54.13:16.3": "à ce moment-là le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant."
+  "sn54.13:16.3": "à ce moment-là le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant.",
+  "sn54.13:17.1": "Au moment, Ananda, où un mendiant reste à observer les ressentis dans les ressentis"
 }
