--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -70,5 +70,6 @@
   "sn54.13:17.2": "l’esprit dans l’esprit (…)",
   "sn54.13:17.3": "le Dhamma dans les phénomènes,",
   "sn54.13:17.4": "à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
-  "sn54.13:17.5": "Au moment, Ananda, où la présence d’esprit d’un mendiant est mise en place, sans distraction,"
+  "sn54.13:17.5": "Au moment, Ananda, où la présence d’esprit d’un mendiant est mise en place, sans distraction,",
+  "sn54.13:17.6": "à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant."
 }
