--- a/translation/fr/sekha/sutta/sn/sn54/sn54.18_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.18_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "sn54.18:0.1": "Les Discours Regroupés par Thèmes 54.18"
+  "sn54.18:0.1": "Les Discours Regroupés par Thèmes 54.18",
+  "sn54.18:0.2": "2. Deuxième chapitre"
 }
