--- a/translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "sn54.20:0.1": "Les Discours Regroupés par Thèmes 54.20",
   "sn54.20:0.2": "2. Deuxième chapitre",
   "sn54.20:0.3": "Destruction des impuretés mentales",
-  "sn54.20:1.1": "(…) à la destruction des impuretés mentales."
+  "sn54.20:1.1": "(…) à la destruction des impuretés mentales.",
+  "sn54.20:1.2": "Et comment, mendiants, la concentration au moyen de la présence de l’esprit sur la respiration est-elle développée et cultivée abondamment de manière à mener à l’abandon des entraves spirituelles (…)"
 }
