--- a/translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json
@@ -3,5 +3,8 @@
   "sn54.20:0.2": "2. Deuxième chapitre",
   "sn54.20:0.3": "Destruction des impuretés mentales",
   "sn54.20:1.1": "(…) à la destruction des impuretés mentales.",
-  "sn54.20:1.2": "Et comment, mendiants, la concentration au moyen de la présence de l’esprit sur la respiration est-elle développée et cultivée abondamment de manière à mener à l’abandon des entraves spirituelles (…)"
+  "sn54.20:1.2": "Et comment, mendiants, la concentration au moyen de la présence de l’esprit sur la respiration est-elle développée et cultivée abondamment de manière à mener à l’abandon des entraves spirituelles (…)",
+  "sn54.20:1.3": "au déracinement des penchants latents (…)",
+  "sn54.20:1.4": "à la compréhension complète du parcours (…)",
+  "sn54.20:1.5": "à la destruction des impuretés mentales ?"
 }
