--- a/translation/fr/sekha/sutta/sn/sn54/sn54.14_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.14_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "sn54.14:0.1": "Les Discours Regroupés par Thèmes 54.14",
-  "sn54.14:0.2": "2. Deuxième chapitre"
+  "sn54.14:0.2": "2. Deuxième chapitre",
+  "sn54.14:1.1": "En ce jour-là, le vénérable Ananda vint voir le Fortuné, lui rendit hommage et s’assit d’un côté. Une fois assis là, le Fortuné lui dit :"
 }
