--- a/translation/fr/sekha/sutta/sn/sn54/sn54.14_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.14_translation-fr-sekha.json
@@ -3,5 +3,6 @@
   "sn54.14:0.2": "2. Deuxième chapitre",
   "sn54.14:0.3": "Avec Ananda (2)",
   "sn54.14:1.1": "En ce jour-là, le vénérable Ananda vint voir le Fortuné, lui rendit hommage et s’assit d’un côté. Une fois assis là, le Fortuné lui dit :",
-  "sn54.14:1.2": "«Y a-t-il, Ananda, un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude ? Y a-t-il quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude ? Et y a-t-il sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude ?"
+  "sn54.14:1.2": "«Y a-t-il, Ananda, un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude ? Y a-t-il quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude ? Et y a-t-il sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude ?",
+  "sn54.14:1.3": "— Bhanté, les enseignements proviennent du Fortuné (…)"
 }
