--- a/translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "sn54.15:0.1": "Les Discours Regroupés par Thèmes 54.15"
+  "sn54.15:0.1": "Les Discours Regroupés par Thèmes 54.15",
+  "sn54.15:0.2": "2. Deuxième chapitre"
 }
