--- a/translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json
@@ -1,5 +1,6 @@
 {
   "sn54.15:0.1": "Les Discours Regroupés par Thèmes 54.15",
   "sn54.15:0.2": "2. Deuxième chapitre",
+  "sn54.15:0.3": "Des mendiants (1)",
   "sn54.15:1.1": "En ce jour-là, un certain nombre de mendiants vinrent voir le Fortuné, lui rendirent hommage, s’assirent d’un côté et lui dirent :"
 }
