--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -1,5 +1,6 @@
 {
   "sn54.16:0.1": "Les Discours Regroupés par Thèmes 54.16",
   "sn54.16:0.2": "2. Deuxième chapitre",
-  "sn54.16:0.3": "Des mendiants (2)"
+  "sn54.16:0.3": "Des mendiants (2)",
+  "sn54.16:1.1": "En ce jour-là, un certain nombre de mendiants vinrent voir le Fortuné, lui rendirent hommage et s’assirent d’un côté. Une fois assis là, le Fortuné leur dit :"
 }
