--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -2,7 +2,7 @@
   "an11.22:0.1": "Discours Sous Forme De Listes 11.22–29",
   "an11.22:0.2": "Premier groupe de cinquante discours",
   "an11.22:0.3": "Similarité",
-  "an11.22:0.4": "Discours sur les yeux sans titre",
+  "an11.22:0.4": "Discours sur l’œil sans titre",
   "an11.22:1.1": "Mendiants, un bouvier doué de onze caractéristiques est incapable de s’occuper d’un troupeau de vaches et de le faire croître.",
   "an11.22:1.2": "Quelles sont ces onze ?",
   "an11.22:1.3": "En cela, mendiants, le bouvier ne connaît pas les formes, il n’est pas connaisseur en matière de caractéristiques, il ne retire pas les œufs de mouches, il ne panse pas les plaies, il ne produit pas de fumée (de feu), il ne connaît pas les gués, il ne connaît pas les rafraîchissements, il ne connaît pas le chemin, il n’est pas connaisseur en matière de pâturages, il trait (les vaches) intégralement, et il ne traite pas les taureaux qui sont les protecteurs et meneurs du troupeau avec suffisamment de respect.",
