--- a/translation/fr/sekha/sutta/an/an11/an11.70-117_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.70-117_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "an11.70-117:0.1": "Discours Sous Forme De Listes 11.70–117"
+  "an11.70-117:0.1": "Discours Sous Forme De Listes 11.70–117",
+  "an11.70-117:0.2": "Premier groupe de cinquante discours"
 }
