--- a/translation/fr/sekha/sutta/an/an11/an11.70-117_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.70-117_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.70-117:0.1": "Discours Sous Forme De Listes 11.70–117",
   "an11.70-117:0.2": "Premier groupe de cinquante discours",
   "an11.70-117:0.3": "Similarité",
+  "an11.70-117:0.4": "Discours sur les formes visibles etc.",
   "an11.70-117:1.1": "(chacun des organes est à développer comme dans le cas de l’œil)"
 }
