--- a/translation/fr/sekha/sutta/an/an11/an11.70-117_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.70-117_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "an11.70-117:1.2": "(…) dans les formes visibles (…)",
   "an11.70-117:1.3": "dans les sons (…)",
   "an11.70-117:1.4": "dans les odeurs (…)",
-  "an11.70-117:1.5": "dans les saveurs (…)"
+  "an11.70-117:1.5": "dans les saveurs (…)",
+  "an11.70-117:1.6": "dans les sensations corporelles (…)"
 }
