--- a/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "an11.118-165:0.1": "Discours Sous Forme De Listes 11.118–165",
-  "an11.118-165:0.2": "Premier groupe de cinquante discours"
+  "an11.118-165:0.2": "Premier groupe de cinquante discours",
+  "an11.118-165:0.3": "Similarité"
 }
