--- a/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
@@ -5,5 +5,6 @@
   "an11.118-165:0.4": "Discours sur la conscience occulaire etc.",
   "an11.118-165:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.118-165:1.2": "(…) dans la conscience oculaire (…)",
-  "an11.118-165:1.3": "dans la conscience auditive (…)"
+  "an11.118-165:1.3": "dans la conscience auditive (…)",
+  "an11.118-165:1.4": "dans la conscience olfactive (…)"
 }
