--- a/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "an11.118-165:1.2": "(…) dans la conscience oculaire (…)",
   "an11.118-165:1.3": "dans la conscience auditive (…)",
   "an11.118-165:1.4": "dans la conscience olfactive (…)",
-  "an11.118-165:1.5": "dans la conscience gustative (…)"
+  "an11.118-165:1.5": "dans la conscience gustative (…)",
+  "an11.118-165:1.6": "dans la conscience corporelle (…)"
 }
