--- a/translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.166-213:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.166-213:1.2": "(…) dans le contact oculaire (…)",
   "an11.166-213:1.3": "dans le contact auditif (…)",
-  "an11.166-213:1.4": "dans le contact olfactif (…)"
+  "an11.166-213:1.4": "dans le contact olfactif (…)",
+  "an11.166-213:1.5": "dans le contact gustatif (…)"
 }
