--- a/translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json
@@ -7,5 +7,7 @@
   "an11.166-213:1.2": "(…) dans le contact oculaire (…)",
   "an11.166-213:1.3": "dans le contact auditif (…)",
   "an11.166-213:1.4": "dans le contact olfactif (…)",
-  "an11.166-213:1.5": "dans le contact gustatif (…)"
+  "an11.166-213:1.5": "dans le contact gustatif (…)",
+  "an11.166-213:1.6": "dans le contact corporel (…)",
+  "an11.166-213:1.7": "dans le contact mental (…)"
 }
