--- a/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
@@ -4,5 +4,6 @@
   "an11.214-261:0.3": "Similarité",
   "an11.214-261:0.4": "Discours sur ressentis engendrés par le contact oculaire etc.",
   "an11.214-261:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
-  "an11.214-261:1.2": "(…) par rapport aux ressentis engendrés par le contact oculaire (…)"
+  "an11.214-261:1.2": "(…) par rapport aux ressentis engendrés par le contact oculaire (…)",
+  "an11.214-261:1.3": "par rapport aux ressentis engendrés par le contact auditif (…)"
 }
