--- a/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.214-261:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.214-261:1.2": "(…) par rapport aux ressentis engendrés par le contact oculaire (…)",
   "an11.214-261:1.3": "par rapport aux ressentis engendrés par le contact auditif (…)",
-  "an11.214-261:1.4": "par rapport aux ressentis engendrés par le contact olfactif (…)"
+  "an11.214-261:1.4": "par rapport aux ressentis engendrés par le contact olfactif (…)",
+  "an11.214-261:1.5": "par rapport aux ressentis engendrés par le contact gustatif (…) par rapport aux ressentis engendrés par le contact gustatif (…) par rapport aux ressentis engendrés par le contact corporel (…) par rapport aux ressentis engendrés par le contact mental (…"
 }
