--- a/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
@@ -8,5 +8,6 @@
   "an11.214-261:1.3": "par rapport aux ressentis engendrés par le contact auditif (…)",
   "an11.214-261:1.4": "par rapport aux ressentis engendrés par le contact olfactif (…)",
   "an11.214-261:1.5": "par rapport aux ressentis engendrés par le contact gustatif (…)",
-  "an11.214-261:1.6": "par rapport aux ressentis engendrés par le contact corporel (…)"
+  "an11.214-261:1.6": "par rapport aux ressentis engendrés par le contact corporel (…)",
+  "an11.214-261:1.7": "par rapport aux ressentis engendrés par le contact mental (…)"
 }
