--- a/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.262-309:0.1": "Discours Sous Forme De Listes 11.262–309",
   "an11.262-309:0.2": "Premier groupe de cinquante discours",
   "an11.262-309:0.3": "Similarité",
-  "an11.262-309:0.4": "Discours sur la perception des formes visibles etc."
+  "an11.262-309:0.4": "Discours sur la perception des formes visibles etc.",
+  "an11.262-309:1.1": "(chacun des items est à développer comme dans le cas de l’œil)"
 }
