--- a/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
@@ -5,5 +5,6 @@
   "an11.262-309:0.4": "Discours sur la perception des formes visibles etc.",
   "an11.262-309:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.262-309:1.2": "(…) par rapport à la perception des formes visibles (…)",
-  "an11.262-309:1.3": "par rapport à la perception des sons (…)"
+  "an11.262-309:1.3": "par rapport à la perception des sons (…)",
+  "an11.262-309:1.4": "par rapport à la perception des odeurs (…)"
 }
