--- a/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.262-309:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.262-309:1.2": "(…) par rapport à la perception des formes visibles (…)",
   "an11.262-309:1.3": "par rapport à la perception des sons (…)",
-  "an11.262-309:1.4": "par rapport à la perception des odeurs (…)"
+  "an11.262-309:1.4": "par rapport à la perception des odeurs (…)",
+  "an11.262-309:1.5": "par rapport à la perception des saveurs (…)"
 }
