--- a/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "an11.262-309:1.2": "(…) par rapport à la perception des formes visibles (…)",
   "an11.262-309:1.3": "par rapport à la perception des sons (…)",
   "an11.262-309:1.4": "par rapport à la perception des odeurs (…)",
-  "an11.262-309:1.5": "par rapport à la perception des saveurs (…)"
+  "an11.262-309:1.5": "par rapport à la perception des saveurs (…)",
+  "an11.262-309:1.6": "par rapport à la perception des sensations corporelles (…)"
 }
