--- a/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.262-309_translation-fr-sekha.json
@@ -8,5 +8,6 @@
   "an11.262-309:1.3": "par rapport à la perception des sons (…)",
   "an11.262-309:1.4": "par rapport à la perception des odeurs (…)",
   "an11.262-309:1.5": "par rapport à la perception des saveurs (…)",
-  "an11.262-309:1.6": "par rapport à la perception des sensations corporelles (…)"
+  "an11.262-309:1.6": "par rapport à la perception des sensations corporelles (…)",
+  "an11.262-309:1.7": "par rapport à la perception des phénomènes mentaux (…)"
 }
