--- a/translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "an11.310-357:0.1": "Discours Sous Forme De Listes 11.310–357",
-  "an11.310-357:0.2": "Premier groupe de cinquante discours"
+  "an11.310-357:0.2": "Premier groupe de cinquante discours",
+  "an11.310-357:0.3": "Similarité"
 }
